--- a/index.html
+++ b/index.html
@@ -70,125 +70,112 @@
           <p>Rent a boat without a license requirement and enjoy a cruise experience to discover the coastal beauty of Athens.</p>
         </div>
 
-        <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Sed ut perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
-            </div>
-          </div>
-
-        </div>
-
       </div>
     </section><!-- End What We Do Section -->
-
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-lg-6">
-            <img src="assets/img/background.png" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-6 pt-4 pt-lg-0">
-            <h3>About Us</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-            <ul>
-              <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bx bx-check-double"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-            </ul>
-            <div class="row icon-boxes">
-              <div class="col-md-6">
-                <i class="bx bx-receipt"></i>
-                <h4>Corporis voluptates sit</h4>
-                <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
-              </div>
-              <div class="col-md-6 mt-4 mt-md-0">
-                <i class="bx bx-cube-alt"></i>
-                <h4>Ullamco laboris nisi</h4>
-                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End About Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services section-bg">
       <div class="container">
 
         <div class="section-title">
-          <h2>Services</h2>
-          <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem</p>
+          <h2>Our Fleet</h2>
         </div>
 
         <div class="row">
           <div class="col-md-6">
             <div class="icon-box">
-              <i class="bi bi-briefcase"></i>
-              <h4><a href="#">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <img src="assets/img/boat1.jpeg" class="icon-box" alt="">
+              <h4><a href="#">Boat I</a></h4>
+              <p>
+                <i class="bi bi-people-fill" style="font-size: 1rem; vertical-align: middle; padding-right: 5px;"></i>
+                2-4 people
+              </p>
+              <p>
+                <i class="bi bi-arrows" style="font-size: 1rem; vertical-align: middle; padding-right: 5px;"></i>
+                10 meters
+              </p>
+              <p>
+                <i class="bi bi-droplet-half" style="font-size: 1rem; vertical-align: middle; padding-right: 5px;"></i>
+                60
+              </p>
+              <p>
+                <i class="bi bi-credit-card" style="font-size: 1rem; vertical-align: middle; padding-right: 5px;"></i>
+                Not needed
+              </p>
             </div>
           </div>
+
           <div class="col-md-6 mt-4 mt-lg-0">
             <div class="icon-box">
-              <i class="bi bi-card-checklist"></i>
-              <h4><a href="#">Dolor Sitema</a></h4>
-              <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-            </div>
-          </div>
-          <div class="col-md-6 mt-4">
-            <div class="icon-box">
-              <i class="bi bi-bar-chart"></i>
-              <h4><a href="#">Sed ut perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-            </div>
-          </div>
-          <div class="col-md-6 mt-4">
-            <div class="icon-box">
-              <i class="bi bi-binoculars"></i>
-              <h4><a href="#">Nemo Enim</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-            </div>
-          </div>
-          <div class="col-md-6 mt-4">
-            <div class="icon-box">
-              <i class="bi bi-brightness-high"></i>
-              <h4><a href="#">Magni Dolore</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-            </div>
-          </div>
-          <div class="col-md-6 mt-4">
-            <div class="icon-box">
-              <i class="bi bi-calendar4-week"></i>
-              <h4><a href="#">Eiusmod Tempor</a></h4>
-              <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <img src="assets/img/boat2.jpeg" class="icon-box" alt="">
+              <h4><a href="#">Boat II</a></h4>
+              <p>
+                <i class="bi bi-people-fill" style="font-size: 1rem; vertical-align: middle; padding-right: 5px;"></i>
+                2-4 people
+              </p>
+              <p>
+                <i class="bi bi-arrows" style="font-size: 1rem; vertical-align: middle; padding-right: 5px;"></i>
+                10 meters
+              </p>
+              <p>
+                <i class="bi bi-droplet-half" style="font-size: 1rem; vertical-align: middle; padding-right: 5px;"></i>
+                60
+              </p>
+              <p>
+                <i class="bi bi-credit-card" style="font-size: 1rem; vertical-align: middle; padding-right: 5px;"></i>
+                Not needed
+              </p>
             </div>
           </div>
         </div>
 
+        <div class="row">
+          <div class="col-md-6">
+            <div class="icon-box">
+              <img src="assets/img/boat1.jpeg" class="icon-box" alt="">
+              <h4><a href="#">Boat III</a></h4>
+              <p>
+                <i class="bi bi-people-fill" style="font-size: 1rem; vertical-align: middle; padding-right: 5px;"></i>
+                2-4 people
+              </p>
+              <p>
+                <i class="bi bi-arrows" style="font-size: 1rem; vertical-align: middle; padding-right: 5px;"></i>
+                10 meters
+              </p>
+              <p>
+                <i class="bi bi-droplet-half" style="font-size: 1rem; vertical-align: middle; padding-right: 5px;"></i>
+                60
+              </p>
+              <p>
+                <i class="bi bi-credit-card" style="font-size: 1rem; vertical-align: middle; padding-right: 5px;"></i>
+                Not needed
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-6 mt-4">
+            <div class="icon-box">
+              <img src="assets/img/boat2.jpeg" class="icon-box" alt="">
+              <h4><a href="#">Boat IV</a></h4>
+              <p>
+                <i class="bi bi-people-fill" style="font-size: 1rem; vertical-align: middle; padding-right: 5px;"></i>
+                2-4 people
+              </p>
+              <p>
+                <i class="bi bi-arrows" style="font-size: 1rem; vertical-align: middle; padding-right: 5px;"></i>
+                10 meters
+              </p>
+              <p>
+                <i class="bi bi-droplet-half" style="font-size: 1rem; vertical-align: middle; padding-right: 5px;"></i>
+                60
+              </p>
+              <p>
+                <i class="bi bi-credit-card" style="font-size: 1rem; vertical-align: middle; padding-right: 5px;"></i>
+                Not needed
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </section><!-- End Services Section -->
 
@@ -197,8 +184,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Our Fleet</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit</p>
+          <h2>Photo Gallery</h2>
+          <p></p>
         </div>
 
         <div class="row">
@@ -437,8 +424,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fuga</p>
+          <h2>Contact us</h2>
         </div>
 
         <div class="row mt-5 justify-content-center">
