--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="container text-center text-md-left">
       <h1>Welcome to <span>Dimos Cruising</span></h1>
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <a href="#what-we-do" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
 
@@ -102,6 +102,7 @@
                   <i class="bi bi-credit-card"></i>
                   Not needed
                 </p>
+                <a href="#what-we-do" class="btn btn-primary">Book now</a>
               </div>
             </div>
           </div>
@@ -127,6 +128,7 @@
                   <i class="bi bi-credit-card"></i>
                   Not needed
                 </p>
+                <a href="#what-we-do" class="btn btn-primary">Book now</a>
               </div>
             </div>
           </div>
@@ -154,6 +156,7 @@
                   <i class="bi bi-credit-card"></i>
                   Not needed
                 </p>
+                <a href="#what-we-do" class="btn btn-primary">Book now</a>
               </div>
             </div>
           </div>
@@ -179,6 +182,7 @@
                   <i class="bi bi-credit-card"></i>
                   Not needed
                 </p>
+                <a href="#what-we-do" class="btn btn-primary">Book now</a>
               </div>
             </div>
           </div>
