--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Our Fleet</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Photos</a></li>
           <li><a class="nav-link scrollto" href="#testimonials">Reviews</a></li>
@@ -55,7 +54,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="container text-center text-md-left">
       <h1>Welcome to <span>Dimos Cruising</span></h1>
-      <a href="#what-we-do" class="btn-get-started scrollto">Get Started</a>
+      <a href="#what-we-do" class="btn-get-started scrollto">Rent a Boat</a>
     </div>
   </section><!-- End Hero -->
 
@@ -451,9 +450,9 @@
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
-                  <i class="bi bi-envelope"></i>
+                  <a href="mailto:info@dimosCruising.com"><i class="bi bi-envelope"></i></a>
                   <h4>Email:</h4>
-                  <p>info@example.com<br>contact@example.com</p>
+                  <p>info@dimosCruising.com</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
@@ -514,7 +513,7 @@
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bi bi-envelope"></i></a>
+        <a href="mailto:info@dimosCruising.com" class="google-plus"><i class="bi bi-envelope"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
