--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                   <i class="bi bi-credit-card"></i>
                   Not needed
                 </p>
-                <a href="#what-we-do" class="btn btn-primary">Book now</a>
+                <a href="mailto:info@dimosCruising.com" class="btn btn-primary">Book now</a>
               </div>
             </div>
           </div>
@@ -127,7 +127,7 @@
                   <i class="bi bi-credit-card"></i>
                   Not needed
                 </p>
-                <a href="#what-we-do" class="btn btn-primary">Book now</a>
+                <a href="mailto:info@dimosCruising.com" class="btn btn-primary">Book now</a>
               </div>
             </div>
           </div>
@@ -155,7 +155,7 @@
                   <i class="bi bi-credit-card"></i>
                   Not needed
                 </p>
-                <a href="#what-we-do" class="btn btn-primary">Book now</a>
+                <a href="mailto:info@dimosCruising.com" class="btn btn-primary">Book now</a>
               </div>
             </div>
           </div>
@@ -181,7 +181,7 @@
                   <i class="bi bi-credit-card"></i>
                   Not needed
                 </p>
-                <a href="#what-we-do" class="btn btn-primary">Book now</a>
+                <a href="#mailto:info@dimosCruising.com" class="btn btn-primary">Book now</a>
               </div>
             </div>
           </div>
