--- a/boat1.html
+++ b/boat1.html
@@ -181,11 +181,9 @@
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="href=https://www.instagram.com/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="mailto:info@dimosCruising.com" class="google-plus"><i class="bi bi-envelope"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
