--- a/index.html
+++ b/index.html
@@ -463,8 +463,8 @@
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="https://www.facebook.com" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="href=https://www.instagram.com/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="mailto:info@dimosCruising.com" class="google-plus"><i class="bi bi-envelope"></i></a>
+        <a href="href=https://www.instagram.com/dimos_cruises/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="mailto:dimoscruising@gmail.com" class="google-plus"><i class="bi bi-envelope"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
