--- a/boat1.html
+++ b/boat1.html
@@ -156,9 +156,9 @@
                 <p>A108 Adam Street<br>New York, NY 535022</p>
               </div>
               <div class="col-lg-4 info mt-4 mt-lg-0">
-                <a href="mailto:info@dimosCruising.com"><i class="bi bi-envelope"></i></a>
+                <a href="mailto:dimoscruising@gmail.com"><i class="bi bi-envelope"></i></a>
                 <h4>Email:</h4>
-                <p>info@dimosCruising.com</p>
+                <p>dimoscruising@gmail.com</p>
               </div>
               <div class="col-lg-4 info mt-4 mt-lg-0">
                 <i class="bi bi-phone"></i>
@@ -182,7 +182,7 @@
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="https://www.facebook.com" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="href=https://www.instagram.com/dimos_cruises/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.instagram.com/dimos_cruises/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="mailto:dimoscruising@gmail.com" class="google-plus"><i class="bi bi-envelope"></i></a>
       </div>
     </div>
