--- a/bono.html
+++ b/bono.html
@@ -61,7 +61,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="boat" class="d-flex flex-column justify-content-center align-items-center">
     <div class="container text-left" style="font-family: 'Poppins', sans-serif">
-      <h1 style="position: absolute; bottom: 10px; left: 10px; color: white; padding-left:50px; padding-bottom:30px;">Αδιστακτος</h1>
+      <h1 style="position: absolute; bottom: 10px; left: 10px; color: white; padding-left:50px; padding-bottom:30px;">Βονο</h1>
     </div>
   </section><!-- End Hero -->
 
@@ -141,39 +141,38 @@
   </section><!-- End Specifications Section -->
 
   <!-- ======= Contact Section ======= -->
-  <section id="contact" class="contact section-bg">
-    <div class="container">
-      <div class="section-title">
-        <h2>Contact us</h2>
-      </div>
-      <div class="row mt-5 justify-content-center">
-        <div class="col-lg-10">
-          <div class="info-wrap">
-            <div class="row">
-              <div class="col-lg-4 info">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>Peiraias<br>Athens, Greece 18350</p>
-              </div>
-
-              <div class="col-lg-4 info mt-4 mt-lg-0">
-                <a href="mailto:dimoscruising@gmail.com"><i class="bi bi-envelope"></i></a>
-                <h4>Email:</h4>
-                <p>dimoscruising@gmail.com</p>
-              </div>
-
-              <div class="col-lg-4 info mt-4 mt-lg-0">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+30 6909195210<br>+30 6980605151</p>
-              </div>
+    <section id="contact" class="contact section-bg">
+        <div class="container">
+            <div class="section-title">
+            <h2>Contact us</h2>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section><!-- End Contact Section -->
+            <div class="row mt-5 justify-content-center">
+            <div class="col-lg-10">
+                <div class="info-wrap">
+                <div class="row">
+                    <div class="col-lg-4 info">
+                    <i class="bi bi-geo-alt"></i>
+                    <h4>Location:</h4>
+                    <p>Peiraias<br>Athens, Greece 18350</p>
+                    </div>
 
+                    <div class="col-lg-4 info mt-4 mt-lg-0">
+                    <a href="mailto:dimoscruising@gmail.com"><i class="bi bi-envelope"></i></a>
+                    <h4>Email:</h4>
+                    <p>dimoscruising@gmail.com</p>
+                    </div>
+
+                    <div class="col-lg-4 info mt-4 mt-lg-0">
+                    <i class="bi bi-phone"></i>
+                    <h4>Call:</h4>
+                    <p>+30 6909195210<br>+30 6980605151</p>
+                    </div>
+                </div>
+                </div>
+            </div>
+            </div>
+        </div>
+        </section><!-- End Contact Section -->
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container d-md-flex py-4">
