--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
             <div class="icon-box">
               <img src="assets/img/image4.jpg" alt="">
               <div class="content">
-                <h4><a href="#">Αδίστακτος</a></h4>
+                <h4><a href="#">Adistaktos</a></h4>
                 <p>
                   <i class="bi bi-people-fill"></i>
-                  2-4 people
+                  8-10 people
                 </p>
                 <p>
                   <i class="bi bi-arrows"></i>
-                  10 meters
+                  9 meters
                 </p>
                 <p>
                   <i class="bi bi-droplet-half"></i>
-                  30hp | 4hp
+                  350hp
                 </p>
                 <p>
                   <i class="bi bi-credit-card"></i>
@@ -113,15 +113,15 @@
                 <h4><a href="#">Βόνο</a></h4>
                 <p>
                   <i class="bi bi-people-fill"></i>
-                  2-4 people
+                  5-7 people
                 </p>
                 <p>
                   <i class="bi bi-arrows"></i>
-                  10 meters
+                  5.5 meters
                 </p>
                 <p>
                   <i class="bi bi-droplet-half"></i>
-                  30hp | 4hp
+                  100hp | 4hp
                 </p>
                 <p>
                   <i class="bi bi-credit-card"></i>
@@ -147,8 +147,8 @@
         <div class="row">
           <div class="col-lg-12">
             <ul id="portfolio-flters">
-              <li data-filter=".filter-app" class="filter-active">Αδιστακτος</li>
-              <li data-filter=".filter-card">Βονο</li>
+              <li data-filter=".filter-app" class="filter-active">Adistaktos</li>
+              <li data-filter=".filter-card">Bono</li>
             </ul>
           </div>
         </div>
