--- a/boat1.html
+++ b/boat1.html
@@ -187,6 +187,16 @@
   </div>
 </section><!-- End Additional Specifications Section -->
 
+<!-- ======= Map Section ======= -->
+<section id="map" class="map">
+  <div class="container">
+    <div class="section-title">
+      <h2>Our Location</h2>
+    </div>
+    <div id="map-container" style="width:100%;height:400px;"></div>
+  </div>
+</section><!-- End Map Section -->
+
   <!-- ======= Contact Section ======= -->
   <section id="contact" class="contact section-bg">
     <div class="container">
@@ -250,6 +260,23 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+   <!-- Google Maps Script -->
+   <script>
+    function initMap() {
+      var varkiza = {lat: 37.8165509, lng: 23.8017448}; // Varkiza Marina coordinates
+      var map = new google.maps.Map(document.getElementById('map-container'), {
+        zoom: 15,
+        center: varkiza
+      });
+      var marker = new google.maps.Marker({
+        position: varkiza,
+        map: map
+      });
+    }
+  </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFu5Ph0eRWdWkA04HzOQ_4Eee1iUdEB0w&callback=initMap" async defer></script>
+<!-- MY API KEY = AIzaSyDFu5Ph0eRWdWkA04HzOQ_4Eee1iUdEB0w-->
 
 </body>
 
