--- a/boat1.html
+++ b/boat1.html
@@ -60,8 +60,8 @@
 
   <!-- ======= Hero Section ======= -->
   <section class="d-flex flex-column justify-content-center align-items-center">
-    <div class="container text-left" style="padding-top:60px;font-family: 'Poppins', sans-serif">
-      <h1 style="color: #308bc7;">Αδίστακτος</h1>
+    <div class="container text-left" style="padding-top:65px;font-size: 60px; font-weight: 100; font-family: 'Poppins', sans-serif;text-transform: uppercase;">
+      <h1 class="boat" style="color: #308bc7;">Αδιστακτος</h1>
     </div>
   </section><!-- End Hero -->
 
@@ -274,7 +274,6 @@
     }
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFu5Ph0eRWdWkA04HzOQ_4Eee1iUdEB0w&callback=initMap" async defer></script>
-<!-- MY API KEY = AIzaSyDFu5Ph0eRWdWkA04HzOQ_4Eee1iUdEB0w-->
 
 </body>
 
