--- a/bono.html
+++ b/bono.html
@@ -60,8 +60,8 @@
 
   <!-- ======= Hero Section ======= -->
   <section class="d-flex flex-column justify-content-center align-items-center">
-    <div class="container text-left" style="padding-top:60px;font-family: 'Poppins', sans-serif">
-      <h1 style="color: #308bc7;">Βόνο</h1>
+    <div class="container text-left" style="padding-top:65px; font-size: 80px; font-weight: 100; font-family: 'Poppins', sans-serif; text-transform: uppercase;">
+      <h1 style="color: #308bc7;">Βονο</h1>
     </div>
   </section><!-- End Hero -->
 
